# battle_friesian

./: .clang_complete  .gitignore  CMakeLists.txt  Main.cpp  todo.txt
cmake/: FindBox2D.cmake
construct/: Builder.hpp  LevelParser.cpp  LevelParser.hpp  Parser.cpp  Parser.hpp
docs/: Doxyfile
flow/: Flow.hpp  GameFlow.cpp  GameFlow.hpp
metric/: GPUMetric.cpp  GPUMetric.hpp
ogl/: Environment.hpp  OGLUtil.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TexturedVertexBuffer.cpp  TexturedVertexBuffer.hpp
ogl/texture/: SingleTexture.cpp  SingleTexture.hpp  Texture.cpp  Texture.hpp
ogl/ui/: Graph.cpp  Graph.hpp  Text.cpp  Text.hpp  UI.cpp  UI.hpp
resources/animations/level1battlefriesian/: attack1.anim  canter.anim
resources/animations/mage/: magewalk.anim
resources/levels/: level0.txt
resources/shaders/: base.frag  base.vert
systems/: GameContext.cpp  GameContext.hpp  Registry.cpp  Registry.hpp  Scales.hpp  System.hpp
systems/animation/: Animation.cpp  Animation.hpp  AnimationSystem.cpp  AnimationSystem.hpp
systems/entity/: EntitySystem.cpp  EntitySystem.hpp  GameObject.hpp
systems/entity/entities/: EasyHorse.cpp  EasyHorse.hpp  Platform.cpp  Platform.hpp
systems/input/: InputSystem.cpp  InputSystem.hpp
systems/physics/: Fixture.cpp  Fixture.hpp  PhysicsObject.cpp  PhysicsObject.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
systems/render/: RenderSystem.cpp  RenderSystem.hpp  Renderable.hpp
systems/render/renderables/: Box2DDebug.cpp  Box2DDebug.hpp  MobileTexturedRender.cpp  MobileTexturedRender.hpp
util/: Hash.hpp  ImageLoad.cpp  ImageLoad.hpp  StringHash.hpp  Tree.hpp  Util.cpp  Util.hpp  Vec3.hpp  Vec3Hashable.hpp  Vec3f.hpp
util/rtti/: RTTIBase.cpp  RTTIBase.hpp
valgrind/: libdl.supp  libgl.supp  sdl.supp  static.supp  valgrind.sh  xorg.supp
